@@ -813,6 +813,12 @@ a frontend for interfacing with the Compaq PA1 and PA2 Personal
 Audio MP3 players.
 </ul>
 
+<ul>
+<li><a href="http://bhepple.freeshell.org/gjots">gjots</a> -
+organises your jottings and musings in a tree structure, and can also keep
+them encrypted if ccrypt(1) is installed.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
