@@ -1,3 +1,7 @@
+2002-10-08  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added gjots.
+
 2002-10-07  Damon Chaplin  <damon@ximian.com>
 
 	* index.html: added link to Glade 2 betas.
